--- a/src/Styles/Footer.css
+++ b/src/Styles/Footer.css
@@ -19,7 +19,8 @@ section {
     position:sticky;
     left: 0;
     bottom: 0;
-	background: #666;
+	background:#211D49;
+	;
 	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
 	box-sizing: border-box;
 	width: 100%;
