--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -4,8 +4,16 @@
     /* margin:10px;
     padding:10px;*/
 } 
-.grid-container {
+.Service-header{
     margin-top:10px;
+    text-align: center;
+    text-decoration:underline;
+    text-shadow: 5px;
+}
+.grid-container {
+    margin-top:30px;
+    padding:0;
+    margin-left: 60px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
   }
