--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -17,3 +17,9 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
   }
+
+  .banner {
+display: flex;
+justify-content: space-around;
+align-items:center;
+}
